--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfoliov3",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.7",
-    "@types/react": "18.2.18",
+    "@types/node": "20.5.0",
+    "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "clsx": "^2.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "framer-motion": "^10.15.0",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.16",
+    "framer-motion": "^10.16.0",
+    "next": "13.4.16",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-intersection-observer": "^9.5.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
