--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js site to Pages
+name: Deploy Next.js Static Site to GitHub Pages
 
 on:
   push:
@@ -12,34 +12,34 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true # Cambiado a true para evitar despliegues obsoletos
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4 # Actualizado a v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4 # Actualizado a v4
+      - name: Setup Node.js 20 LTS
+        uses: actions/setup-node@v4
         with:
-          node-version: "20" # Actualizado a LTS recomendada
+          node-version: "20"
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (ci mode)
+        run: npm ci --prefer-offline
 
-      - name: Build with Next.js
+      - name: Build production site
         run: npm run build
-
-      - name: Export static site
-        run: npm run export
+        env:
+          NEXT_PUBLIC_APP_ENV: production
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3 # Actualizado a v3
         with:
           path: ./out
+          retention-days: 1 # Reduce almacenamiento de artifacts
 
   deploy:
     environment:
@@ -50,4 +50,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3 # Actualizado a v3
+        uses: actions/deploy-pages@v3
