--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "echo 'Ya no necesario: usa solo npm run build'",
     "start": "next start",
     "lint": "next lint"
   },
@@ -22,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
