--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js Static Site to GitHub Pages
+name: Deploy Next.js to GitHub Pages
 
 on:
   push:
@@ -12,42 +12,38 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: true # Cambiado a true para evitar despliegues obsoletos
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js 20 LTS
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 20
           cache: "npm"
 
-      - name: Install dependencies (ci mode)
-        run: npm ci --prefer-offline
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Build production site
+      - name: Build
         run: npm run build
-        env:
-          NEXT_PUBLIC_APP_ENV: production
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3 # Actualizado a v3
+        uses: actions/upload-pages-artifact@v2 # ¡IMPORTANTE! Mantener v2
         with:
           path: ./out
-          retention-days: 1 # Reduce almacenamiento de artifacts
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v2 # ¡IMPORTANTE! Mantener v2
