--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,23 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy Next.js App to GitHub Pages
 
-on:
-  push:
-    branches: ["main"]
+   on:
+     push:
+       branches:
+         - main
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3  # Cambiado a v3 (estable)
-      
-      - name: Setup Node
-        uses: actions/setup-node@v3  # Cambiado a v3
-        with:
-          node-version: 18  # Versión LTS probada
-          cache: 'npm'
-
-      - run: npm ci
-      - run: npm run build
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1  # Versión anterior estable
-        with:
-          path: 'out/'
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy
-        uses: actions/deploy-pages@v1  # Versión anterior estable
+   jobs:
+     build:
+       runs-on: ubuntu-latest
+       steps:
+         - uses: actions/checkout@v2
+         - uses: actions/setup-node@v2
+           with:
+             node-version: 14
+         - run: npm install
+         - run: npm run build
+         - run: npm run export
+         - name: Deploy to GitHub Pages
+           uses: peaceiris/actions-gh-pages@v3
+           with:
+             github_token: ${{ secrets.GITHUB_TOKEN }}
+             publish_dir: ./out
