--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
+    "export": "echo 'Ya no necesario: usa solo npm run build'",
     "start": "next start",
     "lint": "next lint"
   },
